[Linux] Ctrl should be considered as system modifier and not producing characters

|KeyEvent::GetCharacter()| returns the character value of the DomKey, which is not
necessarily the character to be produced by the event.
e.g. "Ctrl+t" doesn't produce a printable character, but the DomKey is "t".

|Textfield| (and other components) relies on the system modifier check to detect
whether they should put a character, and this CL adds Ctrl key as an additional filter.

This is based on the fact that XKB doesn't have a combination with Ctrl that maps to a
printable character.

For Windows:
1. We can't do it because Ctrl+Shift+2 should insert ZWNJ with Persian Keyboard
2. It's currently not breaking because Windows native 'keypress' has different |key| value < 0x20

For Mac:
1. Mac doesn't have this issue and it seems to be using a different approach in
  |RenderWidgetHostViewMac::insertText|

Related issue https://crbug.com/633838

BUG=673302

Review-Url: https://codereview.chromium.org/2580483002
Cr-Commit-Position: refs/heads/master@{#450387}

Former-commit-id: 4127317ca378c1cd8be4dd09428f0dd232888f68